# leetcode

./: .gitignore  README.md  pyproject.toml
Problems/: 1780.ipynb
problems/: 11-problem.ipynb  2529-problem.ipynb
resources/: 1-problem.ipynb  1123-problem.ipynb  12-problem.ipynb  13-problem.ipynb  1358-problem.ipynb  14-problem.ipynb  15-problem.ipynb  1534-problem.ipynb  1720-problem.ipynb  1863-problem.ipynb  19-problem.ipynb  1913-problem.ipynb  1922-problem.ipynb  1976-problem.ipynb  2-problem.ipynb  20-problem.ipynb  2033-problem.ipynb  21-problem.ipynb  2115-problem.ipynb  2140-problem.ipynb  2161-problem.ipynb  2176-problem.ipynb  2179-problem.ipynb  22-problem.ipynb  2206-problem.ipynb  2226-problem.ipynb  23-problem.ipynb  2379-problem.ipynb  2401-problem.ipynb  2460-problem.ipynb  2503-problem.ipynb  2523-problem.ipynb  2551-problem.ipynb  2560-problem.ipynb  2570-problem.ipynb  2579-problem.ipynb  2594-problem.ipynb  26-problem.ipynb  2685-problem.ipynb  27-problem.ipynb  (+37 more)
