[tool.poetry]
name = "leetcode"
version = "0.4.2"
description = "LeetCode Resources"
authors = ["Giansimone Perrino <hello@giansimone.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
notebook = "^7.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
